--- a/docker-manager/web/index.html
+++ b/docker-manager/web/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>docker可视化配置UI</title>
+    <title>国产操作系统云桌面管理</title>
     <script src="static/setting.js"></script>
   </head>
   <body>
